tests/specs/NamespaceDeclaration.txt
# mod.ts
export namespace Namespace {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace Namespace {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

namespace Namespace



# output.json
[
  {
    "kind": "namespace",
    "name": "Namespace",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "namespaceDef": {
      "elements": []
    }
  }
]
